--- a/home.html
+++ b/home.html
@@ -3459,7 +3459,7 @@
                 <div class="footer__qr-app">
                   <a href="" class="footer__qr-app-link">
                     <img
-                      src="./assets/images/AppStore.png"
+                      src="./assets/images/appstore.png"
                       alt=""
                       class="footer__qr-appstore"
                     />
